add done tab